--- a/deployed/soil-sensor-3.yml
+++ b/deployed/soil-sensor-3.yml
@@ -3,7 +3,7 @@ substitutions:
   friendly_name: "Soil Sensor 3"
   interval: 15s
   deep_sleep_run_duration: 10s
-  deep_sleep_sleep_duration: 1h
+  deep_sleep_sleep_duration: 6h
 
 esphome:
   name: ${name}
@@ -43,7 +43,7 @@ wifi:
   # Set up a wifi access point
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  # fast_connect: True
+  fast_connect: True
   manual_ip:
     static_ip: 192.168.4.120
     gateway: 192.168.4.1
@@ -81,7 +81,7 @@ sensor:
           send_every: 1
           send_first_at: 1
       - calibrate_linear:
-        - 1.00 ->  100.00 
+        - 1.2 ->  100.00 
         - 2.40 ->  0.00
       - lambda: |
           if (x < 0) return 0; 
