--- a/deployed/soil-sensor-13.yml
+++ b/deployed/soil-sensor-13.yml
@@ -1,7 +1,7 @@
 substitutions:
-  name: "soil-sensor-7"
-  friendly_name: "Soil Sensor 7"
-  interval: 4s
+  name: "soil-sensor-12"
+  friendly_name: "Soil Sensor 12"
+  interval: 15s
   deep_sleep_run_duration: 10s
   deep_sleep_sleep_duration: 6h
 
@@ -15,60 +15,56 @@ esphome:
     version: dev
   on_boot:
     then:
-      - switch.turn_on: sensor_power  # Power on sensor at boot
-      # - logger.log: "Boot complete, sensor power ON"
-      - script.execute: failsafe_sleep  # Start fallback timer to ensure sleep if Wi-Fi fails
+      - switch.turn_on: sensor_power
   on_shutdown:
-    then:
-      - switch.turn_off: sensor_power  # Ensure sensor is powered off before deep sleep
+      then:
+      - switch.turn_off: sensor_power
+  
 
 esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: arduino
 
-# Uncomment below for USB/serial debugging
+# Enable logging
 logger:
-   # level: DEBUG
 
-# Enable Home Assistant native API
+# Enable Home Assistant API
 api:
 
-# Enable OTA firmware updates
+# Allow Over-The-Air updates
 ota:
-  - platform: esphome
+- platform: esphome
 
-# improv_serial:  # Leave enabled only if provisioning Wi-Fi via USB
-# esp32_improv:
-#   authorizer: none  # Commented out to reduce power (BLE provisioning not needed)
+# Allow provisioning Wi-Fi via serial
+improv_serial:
 
 wifi:
+  # Set up a wifi access point
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  fast_connect: false
-  power_save_mode: HIGH
+  fast_connect: True
   manual_ip:
-    static_ip: 192.168.4.134
+    static_ip: 192.168.4.139
     gateway: 192.168.4.1
     subnet: 255.255.255.0
-  on_connect:
-    # - logger.log: "WiFi connected, cancelling failsafe."
-    - script.stop: failsafe_sleep  # Cancel the failsafe if Wi-Fi connects
 
-# Captive portal for provisioning fallback
+# In combination with the `ap` this allows the user
+# to provision wifi credentials to the device via WiFi AP.
 captive_portal:
 
-# web_server:  # Commented out to save power (used for browsing device config)
+dashboard_import:
+  package_import_url: github://esphome/firmware/esphome-web/esp32c3.yaml@main
+  import_full_config: true
 
-# Failsafe script: enters deep sleep if Wi-Fi not connected in 10s
-script:
-  - id: failsafe_sleep
-    then:
-      - delay: 10s
-      # - logger.log: "WiFi not connected after 10s. Forcing deep sleep."
-      - deep_sleep.enter: deep_sleep_1
+# Sets up Bluetooth LE (Only on ESP32) to allow the user
+# to provision wifi credentials to the device.
+esp32_improv:
+  authorizer: none
 
-# Sensor definitions
+# To have a "next url" for improv serial
+web_server:
+
 sensor:
   - platform: adc
     pin: 
@@ -86,7 +82,7 @@ sensor:
           send_first_at: 1
       - calibrate_linear:
         - 1.00 ->  100.00 
-        - 2.35 ->  0.00
+        - 2.40 ->  0.00
       - lambda: |
           if (x < 0) return 0; 
           else if (x > 100) return 100;
@@ -99,7 +95,7 @@ sensor:
       allow_other_uses: true
     name: "Soil Sensor Voltage"
     update_interval: ${interval}
-    attenuation: 12db
+    attenuation: 12db #required
     filters:
       - median:
           window_size: 5
@@ -126,7 +122,7 @@ sensor:
     unit_of_measurement: "%"
     device_class: BATTERY
     update_interval: ${interval}
-    attenuation: 12db
+    attenuation: 12db #required
     filters:
       - median:
           window_size: 5
@@ -136,6 +132,17 @@ sensor:
       - calibrate_linear:
         - 3.6 ->  100.00 
         - 3.0 ->  0.00
+      # - calibrate_polynomial: #set your own values here
+      #     degree: 4
+      #     datapoints:
+      #     - 3.0 ->  10
+      #     - 3.1 ->  20
+      #     - 3.2 ->  30
+      #     - 3.3 ->  50
+      #     - 3.4 ->  60
+      #     - 3.5 ->  75
+      #     - 3.6 ->  90
+      #     - 3.7 ->  100
       - lambda: |
           if (x < 0) return 0; 
           else if (x > 100) return 100;
@@ -148,28 +155,28 @@ sensor:
       allow_other_uses: true
     name: "Battery Voltage"
     update_interval: ${interval}
-    attenuation: 12db
+    attenuation: 12db #required
     filters:
       - median:
           window_size: 5
           send_every: 1
           send_first_at: 1
       - multiply: 2.0
-
-# Control power to the soil sensor via GPIO
+ 
 switch:
   - platform: gpio
     pin: GPIO3
     id: sensor_power
     internal: true
 
-# Deep sleep: run briefly, then sleep long to conserve battery
 deep_sleep:
   id: deep_sleep_1
   run_duration: ${deep_sleep_run_duration}
   sleep_duration: ${deep_sleep_sleep_duration}
+  
+# use to keep sensors awake or start sleep
+# can be done by sensor name or all sensors
 
-# MQTT controls for remote wake/sleep via topics
 mqtt:
   broker: 192.168.4.109
   username: !secret mqtt_username
