--- a/deployed/soil-sensor-9.yml
+++ b/deployed/soil-sensor-9.yml
@@ -1,9 +1,9 @@
 substitutions:
   name: "soil-sensor-9"
   friendly_name: "Soil Sensor 9"
-  interval: 15s
-  deep_sleep_run_duration: 10s
-  deep_sleep_sleep_duration: 1h
+  interval: 5s
+  deep_sleep_run_duration: 15s
+  deep_sleep_sleep_duration: 6h
 
 esphome:
   name: ${name}
@@ -15,56 +15,64 @@ esphome:
     version: dev
   on_boot:
     then:
-      - switch.turn_on: sensor_power
+      - switch.turn_on: sensor_power  # Power on sensor at boot
+      # - logger.log: "Boot complete, sensor power ON"
+      - script.execute: failsafe_sleep  # Start fallback timer to ensure sleep if Wi-Fi fails
   on_shutdown:
-      then:
-      - switch.turn_off: sensor_power
-  
+    then:
+      - switch.turn_off: sensor_power  # Ensure sensor is powered off before deep sleep
 
 esp32:
   board: esp32-c3-devkitm-1
   framework:
     type: arduino
 
-# Enable logging
+# Uncomment below for USB/serial debugging
 logger:
+#   level: DEBUG
 
-# Enable Home Assistant API
+# Enable Home Assistant native API
 api:
 
-# Allow Over-The-Air updates
+# Enable OTA firmware updates
 ota:
-- platform: esphome
+  - platform: esphome
 
-# Allow provisioning Wi-Fi via serial
-improv_serial:
+# improv_serial:  # Leave enabled only if provisioning Wi-Fi via USB
+# esp32_improv:
+#   authorizer: none  # Commented out to reduce power (BLE provisioning not needed)
 
 wifi:
-  # Set up a wifi access point
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  fast_connect: True
+  fast_connect: true
   manual_ip:
     static_ip: 192.168.4.136
     gateway: 192.168.4.1
     subnet: 255.255.255.0
+  on_connect:
+    # - logger.log: "WiFi connected, cancelling failsafe."
+    - script.stop: failsafe_sleep  # Cancel the failsafe if Wi-Fi connects
 
-# In combination with the `ap` this allows the user
-# to provision wifi credentials to the device via WiFi AP.
+# Captive portal for provisioning fallback
 captive_portal:
 
+# Pre-built example template import
 dashboard_import:
   package_import_url: github://esphome/firmware/esphome-web/esp32c3.yaml@main
   import_full_config: true
 
-# Sets up Bluetooth LE (Only on ESP32) to allow the user
-# to provision wifi credentials to the device.
-esp32_improv:
-  authorizer: none
+# web_server:  # Commented out to save power (used for browsing device config)
 
-# To have a "next url" for improv serial
-web_server:
+# Failsafe script: enters deep sleep if Wi-Fi not connected in 10s
+script:
+  - id: failsafe_sleep
+    then:
+      - delay: 10s
+      # - logger.log: "WiFi not connected after 10s. Forcing deep sleep."
+      - deep_sleep.enter: deep_sleep_1
 
+# Sensor definitions
 sensor:
   - platform: adc
     pin: 
@@ -81,8 +89,8 @@ sensor:
           send_every: 1
           send_first_at: 1
       - calibrate_linear:
-        - 1.00 ->  100.00 
-        - 2.40 ->  0.00
+        - 1.05 ->  100.00 
+        - 2.35 ->  0.00
       - lambda: |
           if (x < 0) return 0; 
           else if (x > 100) return 100;
@@ -95,7 +103,7 @@ sensor:
       allow_other_uses: true
     name: "Soil Sensor Voltage"
     update_interval: ${interval}
-    attenuation: 12db #required
+    attenuation: 12db
     filters:
       - median:
           window_size: 5
@@ -122,7 +130,7 @@ sensor:
     unit_of_measurement: "%"
     device_class: BATTERY
     update_interval: ${interval}
-    attenuation: 12db #required
+    attenuation: 12db
     filters:
       - median:
           window_size: 5
@@ -132,17 +140,6 @@ sensor:
       - calibrate_linear:
         - 3.6 ->  100.00 
         - 3.0 ->  0.00
-      # - calibrate_polynomial: #set your own values here
-      #     degree: 4
-      #     datapoints:
-      #     - 3.0 ->  10
-      #     - 3.1 ->  20
-      #     - 3.2 ->  30
-      #     - 3.3 ->  50
-      #     - 3.4 ->  60
-      #     - 3.5 ->  75
-      #     - 3.6 ->  90
-      #     - 3.7 ->  100
       - lambda: |
           if (x < 0) return 0; 
           else if (x > 100) return 100;
@@ -155,28 +152,28 @@ sensor:
       allow_other_uses: true
     name: "Battery Voltage"
     update_interval: ${interval}
-    attenuation: 12db #required
+    attenuation: 12db
     filters:
       - median:
           window_size: 5
           send_every: 1
           send_first_at: 1
       - multiply: 2.0
- 
+
+# Control power to the soil sensor via GPIO
 switch:
   - platform: gpio
     pin: GPIO3
     id: sensor_power
     internal: true
 
+# Deep sleep: run briefly, then sleep long to conserve battery
 deep_sleep:
   id: deep_sleep_1
   run_duration: ${deep_sleep_run_duration}
   sleep_duration: ${deep_sleep_sleep_duration}
-  
-# use to keep sensors awake or start sleep
-# can be done by sensor name or all sensors
 
+# MQTT controls for remote wake/sleep via topics
 mqtt:
   broker: 192.168.4.109
   username: !secret mqtt_username
